layout/generic/nsTextFrameThebes.cpp
@@ -82,6 +82,8 @@
 #include "nsTextFrameTextRunCache.h"
 #include "nsExpirationTracker.h"
 #include "nsICaseConversion.h"
+#include "nsIUGenCategory.h"
+#include "nsUnicharUtilCIID.h"
 
 #include "nsTextFragment.h"
 #include "nsGkAtoms.h"
@@ -392,7 +394,7 @@ public:
   virtual PRBool PeekOffsetNoAmount(PRBool aForward, PRInt32* aOffset);
   virtual PRBool PeekOffsetCharacter(PRBool aForward, PRInt32* aOffset);
   virtual PRBool PeekOffsetWord(PRBool aForward, PRBool aWordSelectEatSpace, PRBool aIsKeyboardSelect,
-                                PRInt32* aOffset, PRBool* aSawBeforeType);
+                                PRInt32* aOffset, PeekWordState* aState);
 
   NS_IMETHOD CheckVisibility(nsPresContext* aContext, PRInt32 aStartIndex, PRInt32 aEndIndex, PRBool aRecurse, PRBool *aFinished, PRBool *_retval);
   
@@ -4669,6 +4671,7 @@ public:
   PRInt32 GetBeforeOffset();
 
 private:
+  nsCOMPtr<nsIUGenCategory>   mCategories;
   gfxSkipCharsIterator        mIterator;
   const nsTextFragment*       mFrag;
   nsTextFrame*                mTextFrame;
@@ -4742,7 +4745,10 @@ PRBool
 ClusterIterator::IsPunctuation()
 {
   NS_ASSERTION(mCharIndex >= 0, "No cluster selected");
-  return nsTextFrameUtils::IsPunctuationMark(mFrag->CharAt(mCharIndex));
+  if (!mCategories)
+    return PR_FALSE;
+  nsIUGenCategory::nsUGenCategory c = mCategories->Get(mFrag->CharAt(mCharIndex));
+  return c == nsIUGenCategory::kPunctuation || c == nsIUGenCategory::kSymbol;
 }
 
 PRBool
@@ -4810,26 +4816,32 @@ ClusterIterator::ClusterIterator(nsTextFrame* aTextFrame, PRInt32 aPosition,
   }
   mIterator.SetOriginalOffset(aPosition);
 
+  mCategories = do_GetService(NS_UNICHARCATEGORY_CONTRACTID);
+  
   mFrag = aTextFrame->GetContent()->GetText();
   mTrimmed = aTextFrame->GetTrimmedOffsets(mFrag, PR_TRUE);
 
   PRInt32 textLen = aTextFrame->GetContentLength();
-  if (!mWordBreaks.AppendElements(textLen)) {
+  if (!mWordBreaks.AppendElements(textLen + 1)) {
     mDirection = 0; // signal failure
     return;
   }
-  memset(mWordBreaks.Elements(), PR_FALSE, textLen);
+  memset(mWordBreaks.Elements(), PR_FALSE, textLen + 1);
   nsAutoString text;
   mFrag->AppendTo(text, aTextFrame->GetContentOffset(), textLen);
   nsIWordBreaker* wordBreaker = nsContentUtils::WordBreaker();
   PRInt32 i = 0;
-  while ((i = wordBreaker->NextWord(text.get(), textLen, i)) >= 0)
+  while ((i = wordBreaker->NextWord(text.get(), textLen, i)) >= 0) {
     mWordBreaks[i] = PR_TRUE;
+  }
+  // XXX this never allows word breaks at the start or end of the frame, but to fix
+  // this we would need to rewrite word-break detection to use the text from
+  // textruns or something. Not a regression, at least.
 }
 
 PRBool
 nsTextFrame::PeekOffsetWord(PRBool aForward, PRBool aWordSelectEatSpace, PRBool aIsKeyboardSelect,
-                            PRInt32* aOffset, PRBool* aSawBeforeType)
+                            PRInt32* aOffset, PeekWordState* aState)
 {
   PRInt32 contentLength = GetContentLength();
   NS_ASSERTION (aOffset && *aOffset <= contentLength, "aOffset out of range");
@@ -4846,24 +4858,25 @@ nsTextFrame::PeekOffsetWord(PRBool aForward, PRBool aWordSelectEatSpace, PRBool 
   if (!cIter.NextCluster())
     return PR_FALSE;
   
-  PRBool stopAfterPunctuation =
-	  nsContentUtils::GetBoolPref("layout.word_select.stop_at_punctuation");
-  PRBool stopBeforePunctuation = stopAfterPunctuation && !aIsKeyboardSelect;
   do {
-    if (aWordSelectEatSpace == cIter.IsWhitespace() && !*aSawBeforeType) {
-      *aSawBeforeType = PR_TRUE;
+    PRBool isPunctuation = cIter.IsPunctuation();
+    if (aWordSelectEatSpace == cIter.IsWhitespace() && !aState->mSawBeforeType) {
+      aState->SetSawBeforeType();
+      aState->Update(isPunctuation);
       continue;
     }
-    if (cIter.GetBeforeOffset() != offset &&
-        (cIter.IsPunctuation() ? stopBeforePunctuation
-                               : cIter.HaveWordBreakBefore() && *aSawBeforeType)) {
-      *aOffset = cIter.GetBeforeOffset() - mContentOffset;
-      return PR_TRUE;
+    // See if we can break before the current cluster
+    if (!aState->mAtStart) {
+      PRBool canBreak = isPunctuation != aState->mLastCharWasPunctuation
+        ? BreakWordBetweenPunctuation(aForward ? aState->mLastCharWasPunctuation : isPunctuation,
+                                      aIsKeyboardSelect)
+        : cIter.HaveWordBreakBefore() && aState->mSawBeforeType;
+      if (canBreak) {
+        *aOffset = cIter.GetBeforeOffset() - mContentOffset;
+        return PR_TRUE;
+      }
     }
-    if (stopAfterPunctuation && cIter.IsPunctuation()) {
-      *aOffset = cIter.GetAfterOffset() - mContentOffset;
-      return PR_TRUE;
-    }
+    aState->Update(isPunctuation);
   } while (cIter.NextCluster());
 
   *aOffset = cIter.GetAfterOffset() - mContentOffset;
